--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"css": "npx tailwindcss -i ./src/app.css -o ./src/tailwind.css --watch"
 	},
 	"devDependencies": {
+		"@iconify/svelte": "^3.1.4",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-vercel": "^3.0.3",
 		"@sveltejs/kit": "^1.20.4",
