--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 		"prisma": "^5.5.2",
 		"svelte": "^4.0.5",
 		"tailwindcss": "^3.3.3",
-		"vite": "^4.4.2"
+		"vite": "^4.4.2",
+		"vite-plugin-pwa": "^0.16.6"
 	},
 	"type": "module",
 	"dependencies": {
