--- a/static/manifest.json
+++ b/static/manifest.json
@@ -2,10 +2,38 @@
 	"name": "Habitud",
 	"short_name": "Habitud",
 	"description": "Track your habits, master your life",
-	"theme_color": "#000",
+	"theme_color": "#FFA94D",
+	"background_color": "#fff",
 	"display": "standalone",
+	"orientation": "any",
+	"start_url": "/",
+	"scope": "/",
+	"lang": "en",
+	"dir": "ltr",
 	"icons": [
-		{ "src": "/android-chrome-192x192.png", "sizes": "192x192", "type": "image/png" },
-		{ "src": "/android-chrome-512x512.png", "sizes": "512x512", "type": "image/png" }
+		{
+			"src": "/android-chrome-192x192.png",
+			"sizes": "192x192",
+			"type": "image/png"
+		},
+		{
+			"src": "/android-chrome-512x512.png",
+			"sizes": "512x512",
+			"type": "image/png"
+		}
+	],
+	"shortcuts": [
+		{
+			"name": "Track Habits",
+			"short_name": "Habits",
+			"description": "Quickly track your daily habits",
+			"url": "/streak/new",
+			"icons": [
+				{
+					"src": "/android-chrome-192x192.png",
+					"sizes": "192x192"
+				}
+			]
+		}
 	]
 }
