--- a/static/manifest.json
+++ b/static/manifest.json
@@ -2,7 +2,7 @@
 	"name": "Habitud",
 	"short_name": "Habitud",
 	"description": "Track your habits, master your life",
-	"theme_color": "#FFA94D",
+	"theme_color": "#FED7AA",
 	"background_color": "#fff",
 	"display": "standalone",
 	"orientation": "any",
@@ -24,10 +24,10 @@
 	],
 	"shortcuts": [
 		{
-			"name": "Track Habits",
-			"short_name": "Habits",
+			"name": "Track New Habit",
+			"short_name": "New Habit",
 			"description": "Quickly track your daily habits",
-			"url": "/streak/new",
+			"url": "/streaks/new",
 			"icons": [
 				{
 					"src": "/android-chrome-192x192.png",
