--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 	"devDependencies": {
 		"@iconify/svelte": "^3.1.4",
 		"@prisma/client": "^6.19.0",
+		"@skeletonlabs/skeleton": "^3.2.2",
+		"@skeletonlabs/skeleton-svelte": "^4.3.4",
 		"@sveltejs/adapter-auto": "^7.0.0",
 		"@sveltejs/adapter-cloudflare": "^7.2.4",
 		"@sveltejs/adapter-static": "^3.0.10",
@@ -29,13 +31,14 @@
 		"prettier-plugin-svelte": "^3.4.0",
 		"prisma": "^6.19.0",
 		"svelte": "^5.43.7",
-		"tailwindcss": "^3.4.0",
+		"tailwindcss": "^4.0.0",
 		"vite": "^7.2.2",
 		"vite-plugin-pwa": "^1.1.0",
 		"workbox-precaching": "^7.0.0"
 	},
 	"type": "module",
 	"dependencies": {
+		"@tailwindcss/vite": "^4.1.17",
 		"@teamhanko/hanko-elements": "^0.8.2",
 		"dexie": "^3.2.4",
 		"feather-icons": "^4.29.1",
