--- a/static/manifest.json
+++ b/static/manifest.json
@@ -27,7 +27,7 @@
 			"name": "Track New Habit",
 			"short_name": "New Habit",
 			"description": "Quickly track your daily habits",
-			"url": "/streaks/new",
+			"url": "/streaks",
 			"icons": [
 				{
 					"src": "/android-chrome-192x192.png",
