--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@prisma/extension-accelerate": "^2.0.2",
 		"@tailwindcss/vite": "^4.1.17",
 		"@teamhanko/hanko-elements": "^0.8.2",
 		"dexie": "^3.2.4",
