--- a/static/manifest.json
+++ b/static/manifest.json
@@ -2,8 +2,8 @@
 	"name": "Habitud",
 	"short_name": "Habitud",
 	"description": "Track your habits, master your life",
-	"theme_color": "#fff",
-	"background_color": "#fff",
+	"theme_color": "#ffffff",
+	"background_color": "#ffffff",
 	"display": "standalone",
 	"orientation": "any",
 	"start_url": "/streaks",
